--- a/config/config.yml
+++ b/config/config.yml
@@ -3,4 +3,6 @@ selected_style: "default" # Style for 256-color and true-color capable terminals
 selected_style_fallback: "default-fallback" # Style for 8-color capable terminals (Like TTYs)
 
 # Other
+show_top_menu: true
+show_line_index: true
 tab_indentation: 4 # Length of tab characters
