--- a/config/config.yml
+++ b/config/config.yml
@@ -5,4 +5,5 @@ selected_style_fallback: "default-fallback" # Style for 8-color capable terminal
 # Other
 show_top_menu: true
 show_line_index: true
+buffer_info_message: "File: %f Cursor: (%x, %y, %p) Chars: %c"
 tab_indentation: 4 # Length of tab characters
